[package]
name = "rust-cli-sample"
version = "0.1.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
atty = "0.2.14"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "iqo"
path = "src/in-query-out.rs"